--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
             "type": "msedge",
             "request": "launch",
             "name": "Open index.html",
-            "file": "/workspaces/Bento/index.html"
+            "file": "https://rlw-code.github.io/Bento/"
         }
     ]
 }
